# RackMem

./: .gitignore  LICENSE  README.md  sloccount.sh
modules/: Kbuild  Makefile
modules/include/: krdma.h  rack_dm.h  rack_dvs.h  rack_rpc.h  rack_vm.h
modules/krdma/: benchmark.c  cm.c  cm.h  comm.c  dbgfs.c  dbgfs.h  ioctl.c  ioctl.h  krdma.c  rdma.c  rdma.h  rpc.c  rpc.h
modules/rack_block/: block.c  main.c  null_blk.h  null_blk_main.c  null_blk_zoned.c  rack_block.c  zoned.c
modules/rack_dm/: debugfs.c  debugfs.h  fault.c  ioctl.c  ioctl.h  rack_dm.c  rdma.c  region.c  rpc.c  rpc.h
modules/rack_dvs/: dram_backend.c  dvs.c  rack_dvs.c  rdma_backend.c  test.c
modules/rack_rpc/: rack_rpc.c
modules/rack_vm/: debugfs.c  debugfs.h  fault.c  rack_vm.c  region.c  vm.c
userspace/: CMakeLists.txt  README.md  build.sh
userspace/examples/: CMakeLists.txt
userspace/examples/examples/: krdma_rpc_test.cpp  rack_vm_matmul.cpp  rack_vm_test.cpp  remote_alloc.cpp
userspace/examples_c/: CMakeLists.txt
userspace/examples_c/examples_c/: migrate.h  rack_dm_migrate_dst.c  rack_dm_migrate_src.c  rack_dm_test.c  rack_vm_test.c
userspace/examples_cpp/: CMakeLists.txt
userspace/examples_cpp/examples/: rack_dm_test.cpp  rack_vm_test.cpp
userspace/krdma_cm/: CMakeLists.txt
userspace/krdma_cm/krdma_cm/: krdma_client.cpp  krdma_server.cpp
userspace/libkrdma/: CMakeLists.txt
userspace/libkrdma/libkrdma/: krdma.cpp  krdma.hpp
userspace/librackdm/: CMakeLists.txt
userspace/librackdm/librackdm/: rackdm.c  rackdm.h
